Update api route and add md checklist for sprint1
